--- a/index.html
+++ b/index.html
@@ -360,8 +360,9 @@ Difficulty:
 <button onclick="stop_pred()"> Stop </button> -->
 <br>
 <br>
-<a href="https://github.com/paruby/snake-face">Source on GitHub</a>
+<a href="https://github.com/rishub2000/snake-face">Source on GitHub</a>
 <br>
+    To read Blog refer:
 <a href="http://paulrubenstein.co.uk/">http://paulrubenstein.co.uk/</a>
 </body>
 </div>
